[package]
name = "vorbis-sys"
description = "FFI for the libvorbis library"
license = "MIT"
version = "0.0.8"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
build = "libvorbis/build.rs"
links = "vorbis"

[dependencies]
ogg-sys = "*"
libc = "*"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
