[package]
name = "vorbis-sys"
description = "FFI for the libvorbis library"
license = "MIT"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
links = "vorbis"

exclude = [
    ".*",
    "Makefile.am",
    "CMakeLists.txt",
    "libvorbis/",
    "!libvorbis/COPYING",
    "!libvorbis/lib",
    "!libvorbis/include",
]

[dependencies]
ogg-sys = "0.0.9"
libc = "0.2.65"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
